Revert "Fix contributors on home page on mobile"
This reverts commit fa4cff1f3ae8517c2f1fc1bf7ad8833512ec8f20.

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -556,7 +556,7 @@ p {
 
   /* Contributors */
   .contributors-container {
-    padding: 0 60px 100px;
+    padding: 0 60px 300px;
   }
 
   .rectangles {
@@ -577,14 +577,14 @@ p {
   }
 
   .people {
-    position: relative;
+    position: absolute;
     bottom: 0;
     height: auto;
   }
 
   .people-number {
     font-size: 240px;
-    line-height: 350px;
+    line-height: 240px;
     overflow: visible;
     top: 40px;
     position: relative;
@@ -595,7 +595,7 @@ p {
   }
 
   #character-markup {
-    top: 20px;
+    top: -55px;
     right: 60px;
   }
 
